feat: add hyperliquid reconciliation
